...
                        android:paddingRight="64dp"
                        android:textAlignment="gravity"
                        app:layout_constraintTop_toBottomOf="@+id/dialogRecipeTitle">

                        <androidx.cardview.widget.CardView
...

                        <Button
                            android:id="@+id/dialogRecipeBtnCancel"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
...

                        <Button
                            android:id="@+id/dialogRecipeBtnOk"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/dialogRecipeQuantityInput"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
...
                        android:textColorHint="#E1E1E1"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/dialogRecipeSpinner"
                        app:layout_constraintEnd_toStartOf="@+id/dialogRecipeSpinner"
                        app:layout_constraintTop_toTopOf="@+id/dialogRecipeSpinner" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dialogRecipeIngredientsInput"
                        android:layout_width="337dp"
                        android:layout_height="150dp"
...
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/dialogRecipeCaloriesInput"
                        app:layout_constraintStart_toStartOf="@+id/dialogRecipeCaloriesInput"
                        app:layout_constraintTop_toBottomOf="@+id/dialogRecipeCaloriesInput" />
...

                    <EditText
                        android:id="@+id/dialogRecipeNameInput"
                        android:layout_width="360dp"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/ingredientError"
                        android:layout_width="182dp"
                        android:layout_height="55dp"
...

                        <CheckBox
                            android:id="@+id/isAlcoholic"
                            android:layout_width="132dp"
                            android:layout_height="match_parent"
...

                        <CheckBox
                            android:id="@+id/isSpicy"
                            android:layout_width="132dp"
                            android:layout_height="match_parent"
...

                        <CheckBox
                            android:id="@+id/isGluteenFree"
                            android:layout_width="132dp"
                            android:layout_height="match_parent"
...

                        <CheckBox
                            android:id="@+id/isVegetarian"
                            android:layout_width="132dp"
                            android:layout_height="match_parent"
...

                        <CheckBox
                            android:id="@+id/isVegan"
                            android:layout_width="132dp"
                            android:layout_height="match_parent"
...
