...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/dailyNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorSecondary"
            android:minWidth="80dp"
            android:minHeight="60dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/baseline_today_black_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mealDiaryNav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/mealDiaryNav"
...
            android:minWidth="80dp"
            android:minHeight="60dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/baseline_restaurant_black_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recipeBookNav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dailyNav"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recipeBookNav"
...
            android:minWidth="80dp"
            android:minHeight="60dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/baseline_menu_book_black_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chartsNav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mealDiaryNav"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/chartsNav"
...
