...
            </SearchView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:tabIndicatorColor="@android:color/holo_orange_light"
        app:tabSelectedTextColor="@android:color/holo_orange_light"
...
            android:layout_height="wrap_content"
            android:text="Drink" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/navbar"
        android:background="?colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/openButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#26C6DA"
        android:clickable="true"
        app:fabCustomSize="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:rippleColor="@color/purple_200"


        app:srcCompat="@drawable/ic_open" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#26C6DA"
        android:scaleType="center"
        android:visibility="invisible"
...
