...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="?colorPrimaryVariant"
                    android:text="CANCEL"
                    android:textColor="?colorOnPrimary" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="?colorPrimaryVariant"
                    android:text="OK"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputQty"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="76dp"
                android:hint="1234"
                android:inputType="number"
                android:paddingRight="10dp"
...
